<resources>
    <string name="app_name">超级计算器</string>
    <string name="jisuan">计算</string>
    <string name="fangdai">房贷</string>
    <string name="geshui">个税</string>
    <string name="business">商业贷款</string>
    <string name="fund">公积金贷款</string>
    <string name="combination">组合贷款</string>
    <string name="monthlysalary">月薪</string>
    <string name="annualbonus">年终奖</string>
    <string name="AC">AC</string>
    <string name="Del">Del</string>
    <string name="per">%</string>
    <string name="Mul">×</string>
    <string name="Div">÷</string>
    <string name="Add">+</string>
    <string name="Sub">-</string>
    <string name="Point">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="night">9</string>
    <string name="Equ">=</string>
    <string name="total_business_loan">贷款总额（万）</string>
    <string name="input_total_loan">请输入您的贷款总额</string>
    <string name="back_way">还款方式</string>
    <string name="year_number">还款年数</string>
    <string name="rate">贷款利率</string>
    <string name="start_compute">开始计算</string>
    <string name="business_tip">当前年限基准利率:商业%.2f%%</string>
    <string name="fund_tip">当前年限基准利率:公积金%.2f%%</string>
    <string name="c_tips">当前年限基准利率:商业%.2f%%,公积金%.2f%%</string>
    <string name="c_business_name">商业贷款</string>
    <string name="c_business_rate">商业利率</string>
    <string name="c_business_times">1.0</string>
    <string name="c_input_business">请输入商业贷款总额</string>
    <string name="unit_wan">万</string>
    <string name="unit_yuan">元</string>
    <string name="other_bei">倍 =</string>
    <string name="c_fund_name">公积金贷款</string>
    <string name="c_input_fund">请输入公积金贷款总额</string>
    <string name="other_cheng">% ×</string>
    <string name="c_fund_rate">公积金利率</string>
    <string name="default_times">1.0</string>
    <string name="annualbonus_name">奖金金额</string>
    <string name="input_annualbonus">请输入您的年终奖总额</string>
    <string name="fund_name">公积金贷款金额（万）</string>
    <string name="input_mSalary">请输入您的月收入</string>
    <string name="income_num">收入金额</string>
    <string name="inhabit_city">所在城市</string>
    <string name="str_income_tax_threshold_">起征点</string>
    <string name="str_income_tax">5000</string>
    <string name="str_ihf">五险一金</string>
    <string name="str_fund">公积金</string>
    <string name="percentage">%</string>
    <string name="str_medical">医疗</string>
    <string name="str_endowment">养老</string>
    <string name="str_unemployment">失业</string>
    <string name="str_employment_injury">工伤</string>
    <string name="str_maternity">生育</string>
    <string name="toast_error">"输入错误!!!</string>
</resources>
