<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="115dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/c_business_name"
                    android:textColor="@color/colorTitleUnSelected"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/c_business_loan"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/c_input_business"
                        android:inputType="numberDecimal"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/unit_wan" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/c_fund_name"
                    android:textColor="@color/colorTitleUnSelected"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/c_fund_loan"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/c_input_fund"
                        android:inputType="numberDecimal"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/unit_wan" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/back_way"
                    android:textColor="@color/colorTitleUnSelected"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/c_back_way"
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/year_number"
                    android:textColor="@color/colorTitleUnSelected"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/c_year_num"
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/c_business_rate"
                    android:textColor="@color/colorTitleUnSelected"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/c_business_base_rate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/other_cheng" />

                    <EditText
                        android:id="@+id/c_business_rate_times"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/c_business_times"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/other_bei" />

                    <TextView
                        android:id="@+id/c_business_real_rate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/c_fund_rate"
                    android:textColor="@color/colorTitleUnSelected"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/c_fund_base_rate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/other_cheng" />

                    <EditText
                        android:id="@+id/c_fund_rate_times"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/default_times"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/other_bei" />

                    <TextView
                        android:id="@+id/c_fund_real_rate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/c_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/c_btn_start_compute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/radius"
                android:text="@string/start_compute"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>